[project]
name = "viking-file"
version = "0.1.0"
description = "API Wrapper for ViKiNG FiLE API (https://vikingfile.com)"
authors = [{ name = "arabianq", email = "a.tevg@ya.ru" }]
requires-python = ">=3.10"
keywords = ["viking-file", "vikingfile", "api"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.15",
]
