[project]
name = "viking-file"
version = "1.0.6"
description = "API Wrapper for ViKiNG FiLE API (https://vikingfile.com)"
authors = [{ name = "arabianq", email = "a.tevg@ya.ru" }]
requires-python = ">=3.11"
readme = "README.md"
keywords = ["viking-file", "vikingfile", "api"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.14.1",
]

[project.urls]
Repository = "https://github.com/arabianq/viking-file-python"
Documentation = "https://github.com/arabianq/viking-file-python"
Releases = "https://pypi.org/project/viking-file/#history"
